fix PostCard UI (overflow)

--- a/src/css/postcard.css
+++ b/src/css/postcard.css
@@ -9,7 +9,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  height: 130px;
+  height: 200px;
   border: 2px solid #e8e8e8;
   background-color: white;
   padding: var(--box-padding);
@@ -35,7 +35,7 @@
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 4;
 }
 .postcard-footer {
   display: flex;
@@ -49,6 +49,11 @@
   font-size: 0.8rem;
   text-align: center;
   padding: 4px 10px;
+  overflow: hidden;
+  width: 90px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .postcard-leader {
@@ -56,6 +61,10 @@
   text-align: center;
   margin-left: 4px;
   font-weight: 500;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .postcard-time {
